--- a/weeklypay.html
+++ b/weeklypay.html
@@ -9,3 +9,6 @@ double pay;
 
 system.out.print("enter your pay per hour: ");
 Payperhr = reader.nextDouble();
+
+system.out.print(enter regular hoursa week: "):
+hoursWeek = reader.nextInt();
