--- a/weeklypay.html
+++ b/weeklypay.html
@@ -12,3 +12,6 @@ Payperhr = reader.nextDouble();
 
 system.out.print(enter regular hoursa week: "):
 hoursWeek = reader.nextInt();
+
+system.out.print(enter overtime hours: ");
+overTime = reader.nextDouble();
