--- a/weeklypay.html
+++ b/weeklypay.html
@@ -15,3 +15,9 @@ hoursWeek = reader.nextInt();
 
 system.out.print(enter overtime hours: ");
 overTime = reader.nextDouble();
+
+regPay = payperhr * hoursWeek;
+
+overtimepay = overTime * 1.5 * Payperhr;
+
+pay = overtimepay + regpay;
