--- a/weeklypay.html
+++ b/weeklypay.html
@@ -6,6 +6,8 @@
 double PayperHr;
 int hoursWeek;
 double pay;
+double overTime;
+double overTimepay;
 
 system.out.print("enter your pay per hour: ");
 Payperhr = reader.nextDouble();
