--- a/weeklypay.html
+++ b/weeklypay.html
@@ -18,7 +18,7 @@ hoursWeek = reader.nextInt();
 system.out.print(enter overtime hours: ");
 overTime = reader.nextDouble();
 
-regPay = payperhr * hoursWeek;
+regPay = Payperhr * hoursWeek;
 
 overtimepay = overTime * 1.5 * Payperhr;
 
