--- a/weeklypay.html
+++ b/weeklypay.html
@@ -20,7 +20,7 @@ overTime = reader.nextDouble();
 
 regPay = Payperhr * hoursWeek;
 
-overtimepay = overTime * 1.5 * Payperhr;
+overTimepay = overTime * 1.5 * Payperhr;
 
 pay = overtimepay + regpay;
 
