--- a/weeklypay.html
+++ b/weeklypay.html
@@ -22,6 +22,6 @@ regPay = Payperhr * hoursWeek;
 
 overTimepay = overTime * 1.5 * Payperhr;
 
-pay = overtimepay + regpay;
+pay = overTimepay + regpay;
 
 system.out.printLn("your pay this week will be");
