--- a/weeklypay.html
+++ b/weeklypay.html
@@ -3,11 +3,18 @@
 
 <body>
 
+import java.util.Scanner; 
+
+public static void main(string[] args){ 
+{ 
+
+
 double PayperHr;
 int hoursWeek;
 double pay;
 double overTime;
 double overTimepay;
+
 
 system.out.print("enter your pay per hour: ");
 Payperhr = reader.nextDouble();
@@ -18,10 +25,10 @@ hoursWeek = reader.nextInt();
 system.out.print(enter overtime hours: ");
 overTime = reader.nextDouble();
 
-regPay = Payperhr * hoursWeek;
+regPay = payperhr * hoursWeek;
 
-overTimepay = overTime * 1.5 * Payperhr;
+overtimepay = overTime * 1.5 * Payperhr;
 
-pay = overTimepay + regpay;
+pay = overtimepay + regpay;
 
 system.out.printLn("your pay this week will be");
